styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

body {
  background-color: #d3c0af;
  height: 100vh;
}

.flex {
  display: flex;
}

.col-1 {
  background-image: url(./images/image.png);
  flex-grow: 0;
  flex-shrink: 0;
  position: relative;
  width: 45vw;
  height: 100vh;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
}

.main-phrase {
  display: flex;
  flex-direction: column;
  background: rgba(0, 0, 0, 0.6);
  border-radius: 5px;
  width: 710px;
  height: 369px;
  padding: 48px;
  flex-grow: 0;
}

.tagline {
  font-style: normal;
  font-weight: 700;
  font-size: 50px;
  line-height: 65px;
  color: #d3c0af;
  width: 364px;
}

.desciption {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 40px;
  color: #d3c0af;
  overflow: hidden;
}

.col-2 {
  flex-direction: column;
  justify-content: center;
  width: 60vw;
  height: 100vh;
  padding: 0;
  gap: 50px;
  color: #1f2c32;
}

.main-container {
  display: flex;
  flex-direction: column;
  padding: 0;
  gap: 29px;
}

.main-form {
  background: #c6b3a2;
  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.25);
  display: flex;
  flex-direction: column;
  padding: 48px 120px;
  align-items: flex-start;
gap: 31px;
}

.sign-up-text {
  font-weight: 400;
  font-size: 45px;
}

.logo {
  font-family: "Ivy Mode";
  font-weight: 600;
  font-size: 50px;
  padding: 0 120px;
  /* position: absolute;
  left: 530px;
  top: -100px; */
}
.details {
  display: flex;
  flex-direction: column;
  padding: 0px;
gap: 25px;

}

.form-row {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
}

.form-labels {
  display: flex;
  flex-direction: column;
  padding-right: 50px;
  gap: 10px;
}

.form-row input {
  background: #d3c0af;
  border: 1px solid rgba(31, 44, 50, 0.3);
  border-radius: 5px;
  width: 344px;
  height: 45px;
}

.form-container {
  align-self: center;
  height: 533px;
}

.signup-btn {
  width: 266px;
  height: 58px;
  background: #4f6563;
  border-radius: 10px;

  font-style: normal;
  font-weight: 400;
  font-size: 25px;
  color: #fcdcdc;
  margin-bottom: 27px;
}

.container-btn {
  padding: 0 120px;
}

/* @media only screen and (max-width: 1700px) and (min-width: 10px) {
  .logo {
    display: none;
  }
  .col-2, .main-form {
    align-items: center;
    justify-content: center;
  }
  .form-row {
    padding: 0;
    display: block;
  }
  .form-labels {
    text-align: center;
  }
}

@media only screen and (max-width: 1001px) and (min-width: 100px) {
  body {
    display: flex;
    flex-direction: column;

  }
  .col-1, .col-2 {
    width: 100%;
  }
  .desciption {
    display: none;
  }
  .tagline {
    text-align: center;
    width: 100%;
    margin: 0 auto;
  }
} */

